--- a/src/components/Space/Space.css
+++ b/src/components/Space/Space.css
@@ -5,22 +5,18 @@
     height: 100%;
     justify-content: center;
     align-content: center;
-    vertical-align: center  ;
+    vertical-align: center;
 }
 
 .courses-block {
     border-radius: 23px;
     background-color: #121212;
-    background-position: center center;
     border-color: transparent;
     border-style: solid;
     font-family: 'M_Ying_Hei';
-    padding: 0;
     width: 300px;
-    vertical-align: center;
-    margin-top: 0;
     margin-right: 100px;
-    padding-bottom: 25px;
+    height: fit-content;
 }
 
 .course-list {
@@ -43,11 +39,12 @@
 }
 
 .course-item {
+    border: 2px solid transparent;
     background-color: #121212;
     width: 100%;
     text-align: center;
     vertical-align: center;
-    cursor: pointer;
+    user-select: none;
 }
 
 .marker {
@@ -61,6 +58,12 @@
     border: 2px solid wheat;
     border-radius: 20px;
 }
+
+.course-item:hover {
+    border-radius: 20px;
+    background-color: #484444;
+}
+
 
 @font-face {
     font-family: 'M_Ying_Hei';
