--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -5,11 +5,9 @@
 }
 
 .login_block {
-    margin-top: 70px;
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
-    /*align-content: center;*/
+
 
 
     border-radius: 23px;
@@ -19,22 +17,20 @@
     border-style: solid;
     width: 560px;
 
-    line-height: 1.9;
-    font-weight: 400;
+    line-height: 1.6;
     font-size: 20px;
     height: fit-content;
-
 }
 
 .login_title {
     color: white;
-    font-size: 24px;
+    font-size: 28px;
     font-family: 'M_Ying_Hei', Arial;
-    margin: 20px 30px;
+    margin: 40px 40px 20px;
 }
 
 .tip {
-    margin: 5px 30px;
+    margin: 5px 40px;
     color: #757575;
     font-size: 16px;
     font-family: 'M_Ying_Hei', Arial;
@@ -49,7 +45,7 @@
 .input_group {
     display: flex;
     flex-direction: column;
-    margin: 60px 30px 35px;
+    margin: 60px 40px 35px;
     font-family: 'M_Ying_Hei', Arial;
     color: white;
     /*background-color: ;*/
@@ -62,10 +58,15 @@
     -webkit-appearance: none;
     background-color: transparent;
     color: white;
-    /*border: 2px solid transparent;*/
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    border-color: #6e6e6e;
+    /*border-bottom: 1px;*/
 }
 .input::placeholder {
-    color: white;
+    color: dimgray;
     border-color: rgba(248,248,255, 0.2);
 }
 
@@ -82,26 +83,29 @@ input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s eas
     background-color: transparent;
     color: white;
     border-color: rgba(248,248,255, 0.4);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(248,248,255, 0.4);
     outline: 0 none;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    box-shadow: 1px 0px 0px rgba(0, 0, 0, 0.075) inset, 0 0 0px rgba(248,248,255, 0.4);
 }
 
 .email {
 
 }
 
-
-
 .password {
     margin-top: 20px;
 }
 
 .button {
-    margin: 10px 30px 35px;
+    margin: 0px 40px 35px;
     background-color: black;
     font-family: 'M_Ying_Hei', Arial;
     border-color: transparent;
     font-size: 14px;
+    line-height: 1.55;
+    height: 45px;
 }
 
 @font-face {
