--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -7,17 +7,20 @@
     border-color: transparent;
     border-style: solid;
     vertical-align: center;
-    padding-bottom: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
+
 .course_block {
     border-radius: 23px;
     background-color: #121212;
     border-color: transparent;
     border-style: solid;
     font-family: 'M_Ying_Hei';
-    width: 300px;
-    margin-right: 100px;
+    min-width: 320px;
+    margin-right: 60px;
     height: fit-content;
+    text-align: left;
 }
 
 @font-face {
@@ -28,40 +31,60 @@
 }
 .course_title {
     color: white;
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 40px;
+    font-size: 28px;
+    margin: 40px 30px 40px;
+    text-align: left;
 }
 
 .course_settings {
-    color: #50525b;
-    text-align: center;
+    color: #c4c4c4;
+    text-align: left;
     user-select: none;
-    font-size: 20px;
     line-height: 1.9;
-    font-weight: 400;
-    margin-top: -10px;
-    margin-bottom: 5px;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    border: 2px solid transparent;
+    text-indent: 10px;
+    margin-left: 15px;
+    font-size: 18px;
+    margin-right: 16.5px;
 }
 
 .course_settings:hover {
-    color: #a7a3be;
+    border: 2px solid transparent;
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 .course_item {
+    text-align: left;
     border: 2px solid transparent;
     background-color: #121212;
     width: 100%;
-    text-align: center;
     vertical-align: center;
     user-select: none;
+    margin-bottom: 5px;
+    text-indent: 10px;
+    font-size: 18px;
+
+    /*pad*/
 }
 
 .course_item:hover {
-    border-radius: 20px;
-    background-color: #484444;
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 0.15s ease-in-out;
 }
 
 .isActiveCourse {
-    border: 2px solid wheat;
-    border-radius: 20px;
+    border: 2px solid transparent;
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.hr {
+    margin: 20px 20px;
+    padding: 0;
+    height: 0;
+    border: none;
+    border-top: 1.5px solid white;
 }
