--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -1,20 +1,22 @@
 .deadline_block {
     border-radius: 23px;
     background-color: #121212;
-    background-position: center center;
     border-color: transparent;
     border-style: solid;
-    width: 320px;
     font-family: 'M_Ying_Hei';
-    margin-left: 100px;
+    min-width: 320px;
+    margin-left: 60px;
     height: fit-content;
+    text-align: left;
+    user-select: none;
 }
 
 .title {
     color: white;
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 40px;
+    font-size: 28px;
+    margin: 40px 32.5px 50px;
+    text-align: left;
+    line-height: 1.4;
 }
 
 .deadline_list {
@@ -27,10 +29,21 @@
     line-height: 1.55;
     font-weight: 400;
     background-position: center center;
-    border-color: transparent;
-    border-style: solid;
-    margin-left: 30px;
+    margin-left: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    border: 2px solid transparent;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
+.deadline_item:hover {
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 0.15s ease-in-out;
 }
 
 .dl_item_course_name {
@@ -46,15 +59,19 @@
     color: #c4c4c4;
 }
 
+
+
+
 .dl_item_timer {
     margin-top: 15px;
     color: #e07e7e;
 }
 
 .hr {
-    margin: 20px 20px;
+    margin: 0 30px;
     padding: 0;
     height: 0;
     border: none;
     border-top: 1.5px solid white;
 }
+
