--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html {
     margin-left: calc(100vw - 100%);
     margin-right: 0;
+    /*overflow-x: hidden;*/
+    /*display: table-cell;*/
 }
 
 .mySpinner {
