--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -15,6 +15,28 @@
     padding-bottom: 20px;
 }
 
+.config_nav {
+    display: flex;
+}
+
+.config_save {
+    color: lightgray;
+    font-size: 14px;
+    user-select: none;
+    margin: auto;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.config_save:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color 0.017s ease-in-out;
+}
+.config_save:active {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
 .config_block {
     border-radius: 10px;
     background-color: #171717;
@@ -97,6 +119,12 @@
     height: 0;
     border: none;
     border-top: 1.5px solid white;
+}
+
+.config_spinner {
+    text-align: center;
+    position: absolute;
+    bottom: calc(30vh);
 }
 
 @font-face {
