--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -9,6 +9,7 @@
     height: fit-content;
     text-align: left;
     user-select: none;
+    min-height: 250px;
 }
 
 .title {
@@ -38,7 +39,6 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
 
 .deadline_item:hover {
     border-radius: 7px;
