--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -92,6 +92,10 @@ input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s eas
 
 .spinner {
     text-align: center;
+    height: 20px;
+    width: 20px;
+    margin-top: 5px;
+    opacity: 0.7;
 }
 
 .input.bad {
