--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -23,10 +23,12 @@
     color: lightgray;
     font-size: 14px;
     user-select: none;
-    margin: auto;
+    /*margin: auto;*/
     border: 2px solid transparent;
-    border-radius: 10px;
+    border-radius: 7px;
     padding: 5px;
+    display: flex;
+    margin: auto 0px auto 45px;
 }
 
 .config_save:hover {
@@ -122,10 +124,37 @@
     border-top: 1.5px solid white;
 }
 
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0.8;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.config_spinner_end {
+    opacity: 0.8;
+    text-align: center;
+    height: 22px;
+    width: 22px;
+    margin: auto;
+    border-width: 3px;
+    color: green;
+    animation: fadeInAnimation ease-in-out 0.3s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-delay: 1.7s;
+}
+
 .config_spinner {
     text-align: center;
-    position: absolute;
-    bottom: calc(30vh);
+    height: 16px;
+    width: 16px;
+    opacity: 0.7;
+    /*margin-left: 10px;*/
+    margin: auto;
+    border-width: 3px;
 }
 
 @font-face {
