--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -26,7 +26,7 @@
     /*margin: auto;*/
     border: 2px solid transparent;
     border-radius: 7px;
-    padding: 5px;
+    padding: 5px 10px;
     display: flex;
     margin: auto 0px auto 45px;
 }
