--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -157,6 +157,16 @@
     border-width: 3px;
 }
 
+.config_main_spinner {
+    text-align: center;
+    height: 18px;
+    width: 18px;
+    opacity: 0.7;
+    margin-left: calc(630px / 2 - 9px);
+    margin-top: 155px;
+    border-width: 3.5px;
+}
+
 @font-face {
     font-family: 'M_Ying_Hei';
     src: local('M_Ying_Hei'),
