--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -162,7 +162,7 @@
     height: 18px;
     width: 18px;
     opacity: 0.7;
-    margin-left: calc(630px / 2 - 9px);
+    margin-left: 292px;
     margin-top: 155px;
     border-width: 3.5px;
 }
