--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -48,8 +48,8 @@
     height: fit-content;
     text-align: left;
 
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .config_title {
@@ -60,7 +60,7 @@
     user-select: none;
     /*margin-left: 50px;*/
     /*margin: 40px 0 50px 40px;*/
-    margin: 40px 40px;
+    margin: 40px 50px 40px 35px;
 }
 
 .config_local_title {
@@ -85,8 +85,8 @@
     /*margin-left: 15px;*/
     /*margin-right: 15px;*/
     /*margin-bottom: 20px;*/
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-bottom: 10px;
 }
 
@@ -98,7 +98,8 @@
     font-size: 17px;
     margin-bottom: 10px;
     text-align: left;
-    text-indent: 15px;
+    /* text-indent: 15px; */
+    padding: 0 10px;
     -webkit-user-select: none;
     user-select: none;
     vertical-align: center;
