--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,6 @@ body {
     left: 0;
     right: 0;
     z-index: -100;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
