--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -29,11 +29,12 @@
     padding: 5px 10px;
     display: flex;
     margin: auto 0px auto 45px;
+    cursor: pointer;
 }
 
 .config_save:hover {
     background-color: rgba(255, 255, 255, 0.3);
-    transition: background-color 0.017s ease-in-out;
+    transition: background-color 0.1s ease-in-out;
 }
 .config_save:active {
     background-color: rgba(255, 255, 255, 0.3);
@@ -104,13 +105,12 @@
     user-select: none;
     vertical-align: center;
     width: 100%;
-    cursor: pointer;
 }
 
-.config_item:hover {
+/* .config_item:hover {
     background-color: rgba(255, 255, 255, 0.3);
-    transition: background-color 0.017s ease-in-out;
-}
+    transition: background-color 0.1s ease-in-out;
+} */
 
 
 .hr {
@@ -173,13 +173,28 @@
 
 .config_in_item {
     display: flex;
+    position: relative;
+}
+
+.config_in_item :first-child {
+width: 560px;
 }
 
 .config_icon_in_item {
-    opacity: 0.8;
+    opacity: 0.5;
     text-align: center;
-    height: 22px;
-    width: 22px;
-    margin: auto 0px auto 0px; /* top | right | bottom | left */
+    height: 35px;
+    width: 35px;
+    margin: auto 0px auto 10px; /* top | right | bottom | left */
     border-width: 3px;
+    position: relative;
+    flex: auto auto auto;
+    border: 4px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.config_icon_in_item:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color 0.1s ease-in-out;
 }
