--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -99,7 +99,6 @@
     font-size: 17px;
     margin-bottom: 10px;
     text-align: left;
-    /* text-indent: 15px; */
     padding: 0 10px;
     -webkit-user-select: none;
     user-select: none;
@@ -107,11 +106,30 @@
     width: 100%;
 }
 
-/* .config_item:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    transition: background-color 0.1s ease-in-out;
-} */
 
+
+.config_rename {
+    font-size: 17px;
+    color: #ABABAB;
+    background-color: #262626;
+    border: 7px solid transparent;
+    border-radius: 10px;
+    text-align: left;
+
+
+    /*padding: 0 10px;*/
+    /*margin-bottom: 10px;*/
+
+    padding: 0;
+    margin: 0;
+    -webkit-user-select: none;
+    user-select: none;
+    vertical-align: center;
+    width: 100%;
+}
+
+.config_rename:active {
+}
 
 .hr {
     margin: 20px 35px;
@@ -175,6 +193,8 @@
     display: flex;
     position: relative;
 }
+
+
 
 .config_in_item :first-child {
 width: 560px;
