--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -12,6 +12,7 @@
 
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,1);
     margin-top: 60px;
+    margin-bottom: 60px;
     padding-bottom: 20px;
 }
 
@@ -112,23 +113,29 @@
     font-size: 17px;
     color: #ABABAB;
     background-color: #262626;
-    border: 7px solid transparent;
-    border-radius: 10px;
+    border: 0px solid transparent;
+    /* border-radius: 7px; */
     text-align: left;
 
 
     /*padding: 0 10px;*/
-    /*margin-bottom: 10px;*/
+    margin-bottom: 2px;
 
     padding: 0;
-    margin: 0;
+    /* margin: 0; */
     -webkit-user-select: none;
     user-select: none;
     vertical-align: center;
     width: 100%;
+    line-height: normal;
 }
 
 .config_rename:active {
+}
+
+.config_rename:focus {
+    outline: none;
+    /* margin-bottom: 4px; */
 }
 
 .hr {
@@ -198,6 +205,7 @@
 
 .config_in_item :first-child {
 width: 560px;
+margin-top: 2px;
 }
 
 .config_icon_in_item {
@@ -217,4 +225,8 @@ width: 560px;
 .config_icon_in_item:hover {
     background-color: rgba(255, 255, 255, 0.3);
     transition: background-color 0.1s ease-in-out;
+}
+
+.config_icon_in_item:focus {
+    background-color: rgba(255, 255, 255, 0.3);
 }
