--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -59,6 +59,10 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+.course_settings:active {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
 .course_item {
     text-align: left;
     border: 2px solid transparent;
@@ -76,6 +80,10 @@
     border-radius: 7px;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 0.15s ease-in-out;
+}
+
+.course_item:active {
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .isActiveCourse {
