--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -228,8 +228,9 @@ margin-top: 2px;
     transition: background-color 0.1s ease-in-out;
 }
 
-.config_icon_in_item:active {
+.config_icon_in_item.edit_active {
     background-color: rgba(255, 255, 255, 0.6);
 }
+
 
 
