--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -21,6 +21,9 @@
     margin-right: 60px;
     height: fit-content;
     text-align: left;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 50px;
 }
 
 @font-face {
