--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -10,6 +10,9 @@
     text-align: left;
     user-select: none;
     min-height: 250px;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 50px;
 }
 
 .title {
