--- a/src/components/Duty/Duty.module.css
+++ b/src/components/Duty/Duty.module.css
@@ -19,16 +19,24 @@
 }
 
 .duty_back {
-    width: 28px;
-    height: 28px;
-    margin: auto 0px auto 30px;
+    width: 19px;
+    height: 19px;
+    margin: 51px 0px 0px 40px;
     cursor: pointer;
+    
 }
 
 .duty_title {
     color: white;
-    font-size: 28px;
-    margin: 40px 30px 40px;
+    font-size: 26px;
+    margin: 40px 17px 10px;
+    text-align: left;
+}
+
+.duty_title:nth-child(3n+1) {
+    color: white;
+    font-size: 23px;
+    margin: 45px 35px 10px;
     text-align: left;
 }
 
@@ -45,7 +53,7 @@
 
 .duty_file {
     width: 150px;
-    height: 200px;
+    height: 180px;
     margin-bottom: 20px;
 
     color: #c4c4c4;
@@ -89,26 +97,30 @@
 
 .duty_deadline {
     color: #adacac;
-    margin-left: 14px;
+    margin-left: 40px;
     font-size: 14px;
+    margin-bottom: 45px;
 }
 
 .duty_desc_block {
     display: flex;
     margin-left: 8px;
-    margin-top: 16px;
+    margin-top: 13px;
     padding: 2px;
 }
 
 .duty_desc_icon {
-    width: 20px;
-    height: 20px;
-    margin: auto 6px auto 2px;
+    width: 28px;
+    height: 28px;
+    margin: auto 15px auto 25px;
+    opacity: 0.5
+
 }
 
 .duty_desc_text {
     font-size: 14px;
     color: #adacac;
+    margin-top: 4px;
 }
 
 .duty_loader {
@@ -130,5 +142,9 @@
 }
 
 .duty_file_signature {
-    margin: 30px auto 30px auto;
+    padding-left: 23px;
+    width: 120px;
+    height: 70px;
+    display: table-cell;
+    vertical-align: middle;
 }
