--- a/src/components/Duty/Duty.module.css
+++ b/src/components/Duty/Duty.module.css
@@ -41,58 +41,34 @@
 }
 
 .duty_files_list {
-    width: 505px;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /*margin-left: calc(55px / 2);*/
-    /*margin-right: calc(55px / 2);*/
-    margin: 30px auto 0px auto;
-    /*margin-top: 30px;*/
+    flex-direction: column;
+    /*flex-wrap: wrap;*/
+    /*justify-content: space-between;*/
+    /*margin: 30px auto 0px auto;*/
+    /*margin: 10px 30px 30px;*/
 }
 
 .duty_file {
-    width: 150px;
-    height: 180px;
-    margin-bottom: 20px;
-
+    font-family: 'M_Ying_Hei';
     color: #c4c4c4;
-    border-radius: 23px;
-    font-size: 12px;
+    font-size: 16px;
+    line-height: 1.55;
+    text-align: left;
+
     background-color: #1c1c1c;
+    /*width: 100%;*/
+    height: 30px;
+    margin: 5px 5px 5px 0px;
+    padding-left: 5px;
+
     border-color: transparent;
     border-style: solid;
-    font-family: 'M_Ying_Hei';
+    border-radius: 5px;
 
-    text-align: center;
-}
-
-/*.duty_file:nth-child(3n+1) {*/
-/*    !*margin-left: calc(55px / 2);*!*/
-/*    !*margin-left: 0;*!*/
-/*    !*margin-right: calc(55px / 4);*!*/
-
-/*}*/
-
-/*.duty_file:nth-child(3n+2) {*/
-/*    !*margin-left: calc(55px / 4);*!*/
-/*    !*margin-right: calc(55px / 4);*!*/
-/*    color: green;*/
-/*}*/
-
-/*.duty_file:nth-child(3n) {*/
-/*    !*margin-left: calc(55px / 4);*!*/
-/*    !*margin-right: calc(55px / 2);*!*/
-/*    margin-right: 0;*/
-/*}*/
-
-.item:nth-child(3n+1) {
-    margin-left: 0;
-}
-
-/* Оставляем нулевой отступ для последнего элемента в каждой строке */
-.item:nth-child(3n) {
-    margin-right: 0;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .duty_deadline {
@@ -114,7 +90,6 @@
     height: 28px;
     margin: auto 15px auto 25px;
     opacity: 0.5
-
 }
 
 .duty_desc_text {
@@ -131,20 +106,4 @@
     margin-left: 292px;
     margin-top: 155px;
     border-width: 3.5px;
-}
-
-.duty_file_icon {
-    border-radius: 10px;
-    margin: 15px auto 0px auto;
-    width: 85px;
-    height: 85px;
-    background-color: #474747;
-}
-
-.duty_file_signature {
-    padding-left: 23px;
-    width: 120px;
-    height: 70px;
-    display: table-cell;
-    vertical-align: middle;
 }
