--- a/src/components/Duty/DutyMaterials.module.css
+++ b/src/components/Duty/DutyMaterials.module.css
@@ -35,7 +35,7 @@
     border-style: solid;
     border-radius: 5px;
 
-    cursor: pointer;
+    /*cursor: pointer;*/
     text-decoration: none;
 
     display: flex;
@@ -51,12 +51,14 @@
 .duty_materials_file_name {
     font-size: 14px;
     width: 400px;
+    cursor: pointer;
 }
 
 .duty_materials_preview_button {
     width: 30px;
     height: 30px;
     opacity: 0.5;
+    cursor: pointer;
 }
 
 .duty_materials_download_button {
