--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -74,6 +74,7 @@
     user-select: none;
     margin-bottom: 5px;
     padding-left: 10px;
+    padding-right: 10px;
     font-size: 18px;
     cursor: pointer;
 }
