--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -39,13 +39,14 @@
     margin-right: 20px;
     border: 2px solid transparent;
     padding-left: 10px;
+    padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
     cursor: pointer;
 }
 
 .deadline_item:hover {
-    border-radius: 7px;
+    border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 0.15s ease-in-out;
 }
