--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -1,5 +1,11 @@
 .duty_attach_main_block {
-
+    background-color: #1c1c1c;
+    margin: 40px 20px 40px 20px;
+    border-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    
 }
 
 .duty_attach_modal {
@@ -13,17 +19,37 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #c4c4c4;
+    background-color: #646464;
+    margin: auto;
+    border-radius: 20px;
 
     min-width: 560px;
-    max-width: 560px;
+    max-width: 620px;
     max-height: 500px;
 }
 
 .duty_attach_file {
+    display: flex;
+    background-color: #262626;
     color: #c4c4c4;
-    border: 1px solid #ABABAB;
-    border-radius: 6px;
+    /* border: 1px solid #ABABAB; */
+    border-radius: 10px;
+    height: 180px;
+    width: 144px;
+    margin: 10px;
+    overflow-x: hidden; 
+    padding: 10px;
+    transition: all 0.1s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.duty_attach_file:hover {
+    background-color: rgba(255, 255, 255, 0.06);
+}
+
+.duty_attach_file:active {
+    background-color: rgba(255, 255, 255, 0.12);
 }
 
 .duty_attach_add_file_button {
@@ -33,7 +59,9 @@
 }
 
 .duty_attach_add_icon {
-    width: 24px;
-    height: 24px;
+    width: 36px;
+    height: 36px;
     cursor: pointer;
+    margin: auto;
+    opacity: 0.7;
 }
