--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -2,24 +2,6 @@
 
 }
 
-.duty_attach_modal {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #c4c4c4;
-
-    min-width: 560px;
-    max-width: 560px;
-    max-height: 500px;
-}
-
 .duty_attach_file {
     color: #c4c4c4;
     border: 1px solid #ABABAB;
@@ -36,4 +18,13 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
+}
+
+
+
+@font-face {
+    font-family: 'M_Ying_Hei';
+    src: local('M_Ying_Hei'),
+    url('M_Ying_Hei.woff2') format('truetype');
+    font-weight: bold;
 }
