--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -32,6 +32,8 @@
     display: flex;
     background-color: #262626;
     color: #c4c4c4;
+    font-size: 12px;
+    text-align: centerg;
     /* border: 1px solid #ABABAB; */
     border-radius: 10px;
     height: 180px;
@@ -42,6 +44,7 @@
     transition: all 0.1s ease-in-out;
     user-select: none;
     -webkit-user-select: none;
+    word-break: break-all;
 }
 
 .duty_attach_file:hover {
