--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -33,7 +33,7 @@
     background-color: #262626;
     color: #c4c4c4;
     font-size: 12px;
-    text-align: centerg;
+    text-align: center;
     /* border: 1px solid #ABABAB; */
     border-radius: 10px;
     height: 180px;
