--- a/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
@@ -48,9 +48,13 @@
 }
 
 .modal_attach_block {
-    width: 100%;
+    width: calc(100% - 20px);
     height: 240px;
     display: flex;
+    cursor: pointer;
+    border: 2px dashed #adacac;
+    border-radius: 20px;
+    margin: 10px 10px 10px 10px;
 }
 
 .modal_upload_icon {
@@ -60,7 +64,7 @@
 }
 
 .modal_submit {
-
+    cursor: pointer;
 }
 
 @font-face {
