--- a/src/components/Duty/Duty.module.css
+++ b/src/components/Duty/Duty.module.css
@@ -13,7 +13,17 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
     margin: 0px auto;
     margin-bottom: 50px;
+    
 }
+
+.duty_desc_block_cover {
+    animation: spawn 0.3s ease-in-out;
+}
+
+@keyframes spawn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+  }
 
 .duty_nav {
     display: flex;
