--- a/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
@@ -1,6 +1,27 @@
+.modal_bg {
+    position: fixed;
+    width:100%;
+    height:100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index:1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: pointer;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    animation: spawn 0.2s ease-in;
+}
+
+@keyframes spawn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+  }
+
 .modal {
     position: fixed;
-    top: 0;
+    top: auto;
     bottom: 0;
     left: 0;
     right: 0;
@@ -8,22 +29,32 @@
     z-index: 9999;
     display: flex;
     flex-direction: column;
-    background-color: #646464;
+    background-color: rgb(25, 25, 25);
     margin: auto;
-    border-radius: 20px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.6);
 
     min-width: 560px;
     max-width: 620px;
-    max-height: 500px;
+    min-height: 620px;
+    max-height: 620px;
+
+    animation: openUp 0.7s cubic-bezier(0.88, 0.02, 0.22, 0.98);
 }
+
+@keyframes openUp {
+    0% {transform: translateY(150%);}
+    100% {transform: translateY(0%);}
+  }
 
 
 .modal_close {
     width: 28px;
     height: 28px;
     position: absolute;
-    right: 14px;
-    top: 14px;
+    right: 34px;
+    top: 34px;
     cursor: pointer;
 }
 
@@ -31,7 +62,7 @@
     font-size: 20px;
     color: white;
     font-family: 'M_Ying_Hei';
-    margin-top: 30px;
+    margin-top: 28px;
     display: flex;
     height: 30px;
     width: 100%;
@@ -39,28 +70,30 @@
 
 .modal_title_text {
     margin-left: 10px;
+    margin-top: 4px;
 }
 
 .modal_title_icon {
-    width: 26px;
-    height: 26px;
-    margin: auto;
+    width: 38px;
+    height: 38px;
+    margin: 0px 5px 30px 35px
 }
 
 .modal_attach_block {
-    width: calc(100% - 20px);
-    height: 240px;
+    /* width: calc(100% - 20px); */
+    height: 220px;
     display: flex;
     cursor: pointer;
-    border: 2px dashed #adacac;
+    border: 3px dashed #929292;
     border-radius: 20px;
-    margin: 10px 10px 10px 10px;
+    margin: 35px 25px 5px 25px;
 }
 
 .modal_upload_icon {
-    width: 56px;
-    height: 56px;
+    width: 70px;
+    height: 70px;
     margin: auto;
+    opacity: 0.5;
 }
 
 .modal_submit {
@@ -70,6 +103,6 @@
 @font-face {
     font-family: 'M_Ying_Hei';
     src: local('M_Ying_Hei'),
-    url('M_Ying_Hei.woff2') format('truetype');
+        url('M_Ying_Hei.woff2') format('truetype');
     font-weight: bold;
 }
