--- a/src/components/Space/TaskList/TaskList.module.css
+++ b/src/components/Space/TaskList/TaskList.module.css
@@ -22,6 +22,15 @@
     margin-bottom: 90px;
 }
 
+.tasks_block_cover {
+    animation: spawn 0.3s ease-in-out;
+}
+
+@keyframes spawn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+  }
+
 .title {
     color: white;
     font-size: 28px;
