--- a/src/components/Duty/Duty.module.css
+++ b/src/components/Duty/Duty.module.css
@@ -53,6 +53,9 @@
     font-size: 24px;
     margin: 20px 20px 20px 18px;
     text-align: left;
+    user-select: none;
+    -webkit-user-select: none;
+    cursor: pointer;
 }
 
 
