--- a/src/components/Duty/DutyMaterials.module.css
+++ b/src/components/Duty/DutyMaterials.module.css
@@ -8,6 +8,8 @@
     font-size: 24px;
     margin: 40px 37px 40px;
     text-align: left;
+    user-select: none;
+    cursor: default;
 }
 
 .duty_materials_list {
