--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -61,6 +61,7 @@
     /*margin: 40px 30px 40px;*/
     text-align: left;
     user-select: none;
+    cursor: default;
     /*margin-left: 50px;*/
     /*margin: 40px 0 30px 40px;*/
     margin: 38px 30px 40px 28px;
@@ -76,6 +77,7 @@
     margin: 20px 30px 20px;
     text-align: left;
     user-select: none;
+    cursor: default;
     /*margin: 40px 40px;*/
 }
 
@@ -108,6 +110,7 @@
     padding: 0 10px;
     -webkit-user-select: none;
     user-select: none;
+    cursor: default;
     vertical-align: center;
     width: 100%;
 }
