--- a/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
@@ -30,7 +30,10 @@
     z-index: 9999;
     display: flex;
     flex-direction: column;
-    background-color: rgb(25, 25, 25);
+    /* background-color: rgb(25, 25, 25); */
+    background-color: rgba(37, 37, 37, 0.547);
+    backdrop-filter: blur(40px);
+    -webkit-backdrop-filter: blur(40px);
     margin: auto;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
