--- a/src/components/Space/Config/Config.module.css
+++ b/src/components/Space/Config/Config.module.css
@@ -277,6 +277,22 @@ margin-top: 2px;
     animation: openUp 0.7s cubic-bezier(0.88, 0.02, 0.22, 0.98);
 }
 
+.block_header {
+    display: flex;
+}
+
+.to_courses {
+    margin: auto;
+    color: white;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 8px;
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+
+
 @keyframes openUp {
     0% {transform: translateY(150%);}
     100% {transform: translateY(0%);}
