--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -112,8 +112,8 @@
     border-top: 10px solid #010101;
 }
 
-@media (max-width: 1000px) {
-    .course_block {
-        display: none;
-    }
-}
+/*@media (max-width: 1000px) {*/
+/*    .course_block {*/
+/*        display: none;*/
+/*    }*/
+/*}*/
