--- a/src/components/Space/TaskList/TaskList.module.css
+++ b/src/components/Space/TaskList/TaskList.module.css
@@ -1,6 +1,10 @@
 @keyframes spawn {
-    0% {opacity: 0%;}
-    100% {opacity: 100%;}
+    0% {
+        opacity: 0%;
+    }
+    100% {
+        opacity: 100%;
+    }
 }
 
 
@@ -28,9 +32,13 @@
 }
 
 @keyframes spawn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-  }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 .title {
     color: white;
@@ -131,10 +139,25 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+
+.block_header {
+    display: flex;
+}
+
+.to_courses {
+    margin: auto;
+    color: white;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 8px;
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+
 @media (max-width: 1000px) {
 
 
-    
 }
 
 @media (max-width: 600px) {
@@ -156,9 +179,11 @@
     .status_name {
         font-size: 15px;
     }
+
     .open_materials {
         font-size: 15px;
     }
+
     .task_list {
         margin: 10px 20px 30px;
     }
