--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -130,6 +130,11 @@
     transition: all 0.1s ease-in-out;
 }
 
+.duty_attach_delete.taboo {
+    /*background-color: rgba(114, 24, 24, 0.1);*/
+    text-decoration: line-through;
+}
+
 .duty_attach_delete:hover {
     background-color: rgba(114, 24, 24, 0.2);
 }
