--- a/src/components/Navbar/NavBar.module.css
+++ b/src/components/Navbar/NavBar.module.css
@@ -36,7 +36,7 @@
 }
 
 .navbar_student {
-    display: none;
+    /*display: none;*/
     text-align: center;
     margin: auto;
     font-size: 16px;
